styles/arisjs.css
.x-ray-backbone-view {
  border: 1px solid blue;
  margin: 2px;
  overflow: hidden;
}
.x-ray-backbone-view .x-ray-view-template-name {
  color: red;
}
/* Cursor for anchors with no hrefs */
a {
  cursor: pointer;
}
.organizer-section-header {
  color: #777;
}
.table-hover td {
  padding-left: 1em !important;
}
.table-hover .active td {
  background: #d8d8d8 !important;
}
.scene-trigger,
.scene-title,
.game_objects .edit {
  cursor: pointer;
}
/* Navbar */
.aris-nav li {
  text-align: center;
}
@media (max-width: 880px) {
  .nav-name {
    display: none !important;
  }
}
@media (min-width: 881px) and (max-width: 960px) {
  .nav-name {
    font-size: 80%;
    display: block;
  }
  body {
    padding-top: 70px !important;
  }
}
@media (min-width: 961px) and (max-width: 1100px) {
  .nav-name {
    display: block;
  }
  body {
    padding-top: 70px !important;
  }
}
/* Active bootstrap list item as a button */
a.list-group-item.active:hover {
  background-color: #3276b1;
  border-color: #285e8e;
}
.nowrap {
  white-space: nowrap;
}
.absolute {
  /* Disabled for demo */
  /* position: absolute; */
  margin-top: 0;
  margin-left: 0;
  height: 100%;
  width: 100%;
}
.aris-logo img {
  height: 40px;
  margin: 5px 10px;
}
/* Full height editor */
html,
body,
.full-height {
  height: 100%;
  overflow: hidden;
}
body {
  padding-top: 50px;
  background: #f6f6f6;
}
/* Scene editor */
#main .scenes {
  /* Disabled for demo */
  /* position: absolute; */
  margin-top: 0;
  margin-left: 0;
  height: 100%;
  width: 100%;
  z-index: 2;
  padding: 2em;
  background: rgba(175, 175, 175, 0.5);
  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2);
}
/* Removed bootstraps gutter */
#info,
#list {
  padding-right: 15px;
  padding-left: 15px;
  overflow: auto;
}
nav,
.scene-panel {
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}
.scene-panel:hover .panel-heading {
  color: #428bca;
  background: #f0f0f0;
}
.scenes-overlay {
  /* Disabled for demo */
  /* position: absolute; */
  margin-top: 0;
  margin-left: 0;
  height: 100%;
  width: 100%;
  z-index: 20;
  pointer-events: none;
}
.scene-panel {
  max-width: 275px;
  float: left;
}
.scene-panel .scene-title {
  max-width: 200px;
  white-space: nowrap;
  overflow: hidden;
  font-size: 125%;
  margin-right: 0.5em;
}
.scene-panel .new-trigger {
  padding-top: 0.25em;
}
.scene-triggers {
  margin-bottom: 0;
}
.scene-triggers .item-icon {
  text-align: center;
}
.scene-triggers .item-label {
  margin: 0;
}
.scene-triggers .scene-trigger {
  position: relative;
  height: 55px;
  width: 75px;
  overflow: hidden;
  text-align: center;
  white-space: nowrap;
}
.scene-triggers .scene-trigger:hover {
  color: #428bca;
}
.new-scene-button {
  float: right;
  z-index: 2;
}
/* Hidden ID on editor heading */
.object-id {
  visibility: hidden;
}
h4:hover .object-id {
  visibility: visible;
}
/* Hide radio inputs */
.trigger-types input {
  display: none;
}
/* Narrow editor panels */
.shrink-center {
  width: 430px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2em;
}

